--- a/requirements.txt
+++ b/requirements.txt
@@ -1,122 +1,4 @@
-# absl-py==1.0.0
-# appdirs==1.4.4
-# audioread==3.0.0
-# av==10.0.0
-# backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
-# beautifulsoup4 @ file:///tmp/build/80754af9/beautifulsoup4_1631874778482/work
-# brotlipy==0.7.0
-# cachetools==4.2.4
-# certifi==2021.10.8
-# cffi @ file:///tmp/build/80754af9/cffi_1625814693446/work
-# chardet @ file:///tmp/build/80754af9/chardet_1607706768982/work
-# conda==4.11.0
-# conda-build==3.21.5
-# conda-package-handling @ file:///tmp/build/80754af9/conda-package-handling_1618262151086/work
-# cryptography @ file:///tmp/build/80754af9/cryptography_1633521537906/work
-# cupy-cuda114==10.3.1
-# cycler==0.11.0
-# decorator @ file:///tmp/build/80754af9/decorator_1632776554403/work
-# dnspython==2.1.0
-# dotmap==1.3.30
-# einops==0.3.2
-# fastrlock==0.8
-# filelock @ file:///home/linux1/recipes/ci/filelock_1610993975404/work
-# fonttools==4.38.0
-# fsspec==2023.1.0
-# fvcore==0.1.5.post20221221
-# glob2 @ file:///home/linux1/recipes/ci/glob2_1610991677669/work
-# google-auth==2.3.3
-# google-auth-oauthlib==0.4.6
-# grpcio==1.41.1
-# huggingface-hub==0.16.4
-# idna @ file:///home/linux1/recipes/ci/idna_1610986105248/work
-# imageio==2.17.0
-# importlib-metadata==4.8.2
-# iopath==0.1.10
-# ipython @ file:///tmp/build/80754af9/ipython_1632141056704/work
-# jedi @ file:///tmp/build/80754af9/jedi_1611333758854/work
-# Jinja2 @ file:///tmp/build/80754af9/jinja2_1612213139570/work
-# joblib==1.1.0
-# kiwisolver==1.4.4
-# libarchive-c @ file:///tmp/build/80754af9/python-libarchive-c_1617780486945/work
-# librosa==0.9.2
-# llvmlite==0.39.1
-# Markdown==3.3.4
-# MarkupSafe @ file:///tmp/build/80754af9/markupsafe_1621528142364/work
-# matplotlib==3.5.3
-# matplotlib-inline @ file:///tmp/build/80754af9/matplotlib-inline_1628242447089/work
-# mkl-fft==1.3.1
-# mkl-random @ file:///tmp/build/80754af9/mkl_random_1626179032232/work
-# mkl-service==2.4.0
-# natsort==8.0.0
-# networkx==2.6.3
-# numba==0.56.4
-# numpy @ file:///tmp/build/80754af9/numpy_and_numpy_base_1634106693478/work
-# oauthlib==3.1.1
-# olefile==0.46
-# opencv-python==4.5.4.60
-# packaging==21.3
-# pandas==1.3.5
-# parameterized==0.8.1
-# parso @ file:///tmp/build/80754af9/parso_1617223946239/work
-# pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
-# pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-# Pillow==8.4.0
-# pkginfo==1.7.1
-# pooch==1.6.0
-# portalocker==2.6.0
-# prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1633440160888/work
-# protobuf==3.19.1
-# psutil @ file:///tmp/build/80754af9/psutil_1612298016854/work
-# ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-# pyasn1==0.4.8
-# pyasn1-modules==0.2.8
-# pycosat==0.6.3
-# pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-# Pygments @ file:///tmp/build/80754af9/pygments_1629234116488/work
-# pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1608057966937/work
-# pyparsing==3.0.8
-# PySocks @ file:///tmp/build/80754af9/pysocks_1594394576006/work
-# python-dateutil==2.8.2
-# python-etcd==0.4.5
-# pytorch-ssim==0.1
-# pytorchvideo==0.1.5
-# pytz==2021.3
-# PyWavelets==1.3.0
-# PyYAML==5.4.1
-# requests @ file:///tmp/build/80754af9/requests_1608241421344/work
-# requests-oauthlib==1.3.0
-# resampy==0.4.2
-# rsa==4.7.2
-# ruamel-yaml-conda @ file:///tmp/build/80754af9/ruamel_yaml_1616016701961/work
-# safetensors==0.4.5
-# scikit-image==0.19.2
-# scikit-learn==1.0.2
-# scipy==1.7.3
-# six @ file:///tmp/build/80754af9/six_1623709665295/work
-# soundfile==0.11.0
-# soupsieve @ file:///tmp/build/80754af9/soupsieve_1616183228191/work
-# tabulate==0.9.0
-# tensorboard==2.7.0
-# tensorboard-data-server==0.6.1
-# tensorboard-plugin-wit==1.8.0
-# termcolor==2.2.0
-# threadpoolctl==3.1.0
-# tifffile==2021.11.2
-# timm==0.9.12
-# torch==1.10.0
-# torchelastic==0.2.0
-# torchtext==0.11.0
-# torchvision==0.11.0
-# tqdm @ file:///tmp/build/80754af9/tqdm_1625563689033/work
-# traitlets @ file:///tmp/build/80754af9/traitlets_1632522747050/work
-# typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1631814937681/work
-# urllib3 @ file:///tmp/build/80754af9/urllib3_1625084269274/work
-# wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
-# Werkzeug==2.0.2
-# yacs==0.1.8
-# zipp==3.6.0
-
+# === Core & utils ===
 absl-py==1.0.0
 appdirs==1.4.4
 audioread==3.0.0
@@ -128,23 +10,12 @@ cachetools==4.2.4
 certifi==2021.10.8
 cffi==1.15.0
 chardet==4.0.0
-
-# Thay
-# conda==4.11.0
-# conda-build==3.21.5
-# conda-package-handling==1.7.3
-# Thành
 cryptography==35.0.0
-# Thay
-# cupy-cuda114==10.3.1
-# Thành
-cupy-cuda11x
 cycler==0.11.0
 decorator==5.1.0
 dnspython==2.1.0
 dotmap==1.3.30
 einops==0.3.2
-fastrlock==0.8
 filelock==3.4.0
 fonttools==4.38.0
 fsspec==2023.1.0
@@ -165,94 +36,19 @@ joblib==1.1.0
 kiwisolver==1.4.4
 libarchive-c==2.9
 librosa==0.9.2
+
+# Giữ cặp tương thích với numba 0.56.4 & librosa 0.9.2
 llvmlite==0.39.1
+numba==0.56.4
+numpy==1.22.4
+scipy==1.7.3
+
 Markdown==3.3.4
 MarkupSafe==2.0.1
 matplotlib==3.5.3
 matplotlib-inline==0.1.3
-
-# Thay
-# mkl-fft==1.3.1
-# mkl-random==1.2.2
-# mkl-service==2.4.0
-# Thành
-# numpy==1.21.2
-scipy==1.7.3
-
 natsort==8.0.0
 networkx==2.6.3
-numba==0.56.4
-
-numpy==1.22.4
-
 oauthlib==3.1.1
 olefile==0.46
 opencv-python==4.5.4.60
-packaging==21.3
-pandas==1.3.5
-parameterized==0.8.1
-parso==0.8.2
-pexpect==4.8.0
-pickleshare==0.7.5
-# Pillow==8.4.0
-pkginfo==1.7.1
-pooch==1.6.0
-portalocker==2.6.0
-prompt-toolkit==3.0.20
-protobuf==3.19.1
-psutil==5.8.0
-ptyprocess==0.7.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycosat==0.6.3
-pycparser==2.20
-Pygments==2.10.0
-pyOpenSSL==20.0.1
-pyparsing==3.0.8
-PySocks==1.7.1
-python-dateutil==2.8.2
-python-etcd==0.4.5
-pytorch-ssim==0.1
-pytorchvideo==0.1.5
-pytz==2021.3
-PyWavelets==1.3.0
-# PyYAML==5.4.1
-PyYAML==6.0.1
-requests==2.25.1
-requests-oauthlib==1.3.0
-resampy==0.4.2
-rsa==4.7.2
-# ruamel-yaml-conda==0.15.80
-safetensors==0.4.5
-scikit-image==0.19.2
-scikit-learn==1.0.2
-scipy==1.7.3
-six==1.16.0
-soundfile==0.11.0
-soupsieve==2.2.1
-tabulate==0.9.0
-tensorboard==2.7.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-termcolor==2.2.0
-threadpoolctl==3.1.0
-tifffile==2021.11.2
-timm==0.9.12
-# Thay
-# torch==1.10.0
-# torchelastic==0.2.0
-# torchtext==0.11.0
-# torchvision==0.11.0
-# Thành
-# numpy==1.21.2
-typing-extensions==4.5.0
-pillow>=9.0.0
-
-tqdm==4.62.3
-traitlets==5.1.0
-# typing-extensions==3.10.0.2
-urllib3==1.26.7
-wcwidth==0.2.5
-Werkzeug==2.0.2
-yacs==0.1.8
-zipp==3.6.0
